--- a/user/sass/_button.scss
+++ b/user/sass/_button.scss
@@ -62,92 +62,31 @@
 	}
 }
 
+.dropdown_btn {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: space-between;
+	padding: 12px 20px;
+	line-height: 24px;
+	text-align: center;
+	background-color: transparent;
+	border: 1px solid $grey;
+	border-left-width: 0;
+	font-size: 14px;
+	font-weight: 600;
+    -o-transition: all .2s ease-in-out;
+    -webkit-transition: all .2s ease-in-out;
+    transition: all .2s ease-in-out;
+	
+}
+
+
 .nav_btn {
 	display: inline-block;
-
 }
 
-         
-.btn-grad {
-	background-image: linear-gradient(to right, #000000 0%, #434343  51%, #000000  100%);
-	margin: 10px;
-	padding: 15px 45px;
-	text-align: center;
-	text-transform: uppercase;
-	transition: 0.5s;
-	background-size: 200% auto;
-	color: white;            
-	box-shadow: 0 0 20px #eee;
-	border-radius: 10px;
-	display: block;
-  }
-
-  .btn-grad:hover {
-	background-position: right center; /* change the direction of the change here */
-	color: #fff;
-	text-decoration: none;
-  }
  
-/*=================== custom button rule start ====================*/
-
-.button{
-	display: inline-block;
-	border: 1px solid transparent;
-	font-size: 15px;
-	font-weight: 500;
-	padding: 12px 54px;
-	border-radius: 4px;
-	color: $white_color;
-	border: 1px solid $border_color;
-	text-transform: uppercase;
-	background-color: $btn_bg;
-	cursor: pointer;
-	@include transform_time(0.5s);
-
-	@media(max-width: 767px){
-		font-size: 13px;
-		padding: 9px 24px;
-	}
-
-	&:hover{
-		color: $white_color;
-	}
-
-
-	&-link{
-		letter-spacing: 0;
-		color: #3b1d82;
-		border: 0;
-		padding: 0;
-
-		&:hover{
-			background: transparent;
-			color: #3b1d82;
-		}
-	}
-
-	&-header{
-		color: $white_color;
-		border-color: $border_color;
-
-		&:hover{
-			background: #b8024c;
-			color: $white_color;
-		}
-	}
-
-	&-contactForm{
-		color: $white_color;
-		border-color: $border_color;
-		padding: 12px 25px;
-
-		// &:hover{
-		// 	// border-color: $title-color;
-		// 	// background: $title-color;
-		// 	// color: $white_color;
-		// }
-	}
-}
 
 
 /* End Main Button Area css
