--- a/user/sass/_our_offer.scss
+++ b/user/sass/_our_offer.scss
@@ -1,5 +1,6 @@
 /************* our offer *****************/
 .our_offer {
+    background-color: $black;
     padding-top: 50px;
     padding-bottom: 70px;
     text-align: center;
