--- a/user/sass/_product_list.scss
+++ b/user/sass/_product_list.scss
@@ -1,5 +1,6 @@
 /***************** product list css *******************/
 .product_list {
+    background-color: $black;
     border-top: 0.5px solid #222222;
     .section_tittle {
         text-align: left !important;
