--- a/user/sass/_404.scss
+++ b/user/sass/_404.scss
@@ -11,6 +11,7 @@
     padding-left: 5%;
     padding-right: 5%;
     color: $white;
+    background-color: black;
         .error_area {
             display: flex;
             flex-direction: column;
