--- a/user/sass/_cart.scss
+++ b/user/sass/_cart.scss
@@ -1,6 +1,7 @@
 .cart_part {
     background-color: $white;
     padding-bottom: 100px;
+    height: 100%;
     .cart_title {
         padding: 20px 0;
         border-bottom: 1px solid rgba(0,0,0,.125);
