--- a/user/sass/_common.scss
+++ b/user/sass/_common.scss
@@ -333,4 +333,20 @@ ul {
     }
 }
 
+#toTop { /* Hidden by default */
+    position: fixed; 
+    bottom: 20px; 
+    right: 20px;
+    width: 40px;
+    height: 40px;
+    z-index: 99;
+    background-color: $black_color; 
+    color: white; 
+    border: 2px solid $white; 
+    cursor: pointer; /* Add a mouse pointer on hover */
+    border-radius: 50%; /* Rounded corners */
+    font-size: 20px; /* Increase font size */
+    transition: background-color 0.3s; /* Smooth transition for hover effect */
+}
+
 /**************** common css end ****************/
