--- a/admin/css/style.css
+++ b/admin/css/style.css
@@ -28,6 +28,37 @@
     opacity: 1;
 }
 
+/*** Drop Image ***/
+#drop-area{
+    width: 350px;
+    height: 350px;
+    padding: 30px;
+    text-align: center;
+    border-radius: 20px;
+    display: flex;
+}
+
+#img-view{
+    margin: auto;
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+    border: 2px dashed #009CFF;
+    background-color: #f0f7fc;
+    background-position: center;
+    background-size: cover;
+}
+
+#img-view i{
+    margin-top: 60px;
+    margin-bottom: 10px;
+    color: #009CFF;
+}
+
+#img-view span {
+    display: block;
+    font-size: 12px;
+}
 
 /*** Button ***/
 .btn {
