--- a/src/main/resources/templates/Test/index.html
+++ b/src/main/resources/templates/Test/index.html
@@ -34,7 +34,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-12">
                     <nav class="navbar navbar-expand-lg navbar-light">
-                        <a class="navbar-brand" href="/"> <img src="/img/logo/white_logo.png" alt="logo"> </a>
+                        <a class="navbar-brand" href="/static"> <img src="/img/logo/white_logo.png" alt="logo"> </a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse"
                             data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
@@ -44,7 +44,7 @@
                         <div class="collapse navbar-collapse main-menu-item" id="navbarSupportedContent">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <a class="nav-link" href="/">Trang chủ</a>
+                                    <a class="nav-link" href="/static">Trang chủ</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="/category">
@@ -405,19 +405,19 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
     <script src="/js/masonry.pkgd.js"></script>
     <!-- particles js -->
     <script src="/js/owl.carousel.min.js"></script>
-    <script src=" /js/jquery.nice-select.min.js"></script>
+    <script src="/js/jquery.nice-select.min.js"></script>
     <!-- slick js -->
-    <script src=" /js/slick.min.js"></script>
-    <script src=" /js/jquery.counterup.min.js"></script>
-    <script src=" /js/waypoints.min.js"></script>
-    <script src=" /js/contact.js"></script>
-    <script src=" /js/jquery.ajaxchimp.min.js"></script>
-    <script src=" /js/jquery.form.js"></script>
-    <script src=" /js/jquery.validate.min.js"></script>
-    <script src=" /js/mail-script.js"></script>
+    <script src="/js/slick.min.js"></script>
+    <script src="/js/jquery.counterup.min.js"></script>
+    <script src="/js/waypoints.min.js"></script>
+    <script src="/js/contact.js"></script>
+    <script src="/js/jquery.ajaxchimp.min.js"></script>
+    <script src="/js/jquery.form.js"></script>
+    <script src="/js/jquery.validate.min.js"></script>
+    <script src="/js/mail-script.js"></script>
     <!-- custom js -->
-    <script src=" /js/custom.js"></script>
-    <script src=" /js/swiper_custom.js"></script>
+    <script src="/js/custom.js"></script>
+    <script src="/js/swiper_custom.js"></script>
 </body>
 
 </html>
