--- a/src/main/resources/templates/admin/login.html
+++ b/src/main/resources/templates/admin/login.html
@@ -47,7 +47,7 @@
                             </a>
                             <h3>Sign In</h3>
                         </div>
-                        <form th:action="@{/login}" method="post">
+                        <form th:action="@{/dashboard/login}" method="post">
                             <div class="form-floating mb-3">
                                <input type="text" class="form-control" id="account" name="username" placeholder="Nhập tên tài khoản">
                                <label for="account">Nhập tên tài khoản</label>
