--- a/src/main/resources/templates/admin/add_product.html
+++ b/src/main/resources/templates/admin/add_product.html
@@ -39,14 +39,14 @@
         <!-- Sidebar Start -->
         <div class="sidebar pb-3">
             <nav class="navbar bg-light navbar-light">
-                <a href="index.html" class="navbar-brand mx-4 mb-3">
+                <a href="/dashboard" class="navbar-brand mx-4 mb-3">
                     <h3 class="text-primary">DeAdmin</h3>
                 </a>
                 <div class="navbar-nav w-100">
-                    <a href="/admin/index.html" class="nav-item nav-link"><i class="fa fa-home me-2"></i>Dashboard</a>
-                    <a href="/admin/product.html" class="nav-item nav-link"><i class="fa fa-box me-2"></i>Sản phẩm</a>
-                    <a href="/admin/add_product.html" class="nav-item nav-link active"><i class="fa fa-plus-circle me-2"></i>Tạo sản phẩm</a>
-                    <a href="/admin/edit_product.html" class="nav-item nav-link"><i class="fa fa-edit me-2"></i>Chỉnh sửa sản phẩm</a>
+                    <a href="/dashboard" class="nav-item nav-link"><i class="fa fa-home me-2"></i>Dashboard</a>
+                    <a href="/dashboard/product" class="nav-item nav-link"><i class="fa fa-box me-2"></i>Sản phẩm</a>
+                    <a href="/dashboard/add-product" class="nav-item nav-link active"><i class="fa fa-plus-circle me-2"></i>Tạo sản phẩm</a>
+                    <a href="/dashboard/update-product" class="nav-item nav-link"><i class="fa fa-edit me-2"></i>Chỉnh sửa sản phẩm</a>
                 </div>
             </nav>
         </div>
@@ -57,7 +57,7 @@
         <div class="content">
             <!-- Navbar Start -->
             <nav class="navbar navbar-expand bg-light navbar-light sticky-top px-4 py-0">
-                <a href="index.html" class="navbar-brand d-flex d-lg-none me-4">
+                <a href="/dashboard" class="navbar-brand d-flex d-lg-none me-4">
                     <h2 class="text-primary mb-0"><i class="fa fa-hashtag"></i></h2>
                 </a>
                 <a href="#" class="sidebar-toggler flex-shrink-0">
@@ -70,7 +70,7 @@
                             <span class="d-none d-lg-inline-flex">Admin</span>
                         </a>
                         <div class="dropdown-menu dropdown-menu-end bg-light border-0 rounded-0 rounded-bottom m-0">
-                            <a href="login.html" class="dropdown-item">Log Out</a>
+                            <a href="/logout" class="dropdown-item">Log Out</a>
                         </div>
                     </div>
                 </div>
