--- a/src/main/resources/templates/user/checkout.html
+++ b/src/main/resources/templates/user/checkout.html
@@ -130,10 +130,10 @@
       <div class="container">
         <ol class="breadcrumb">
           <li class="breadcrumb-item">
-            <a href="/user/index.html">Trang chủ</a>
+            <a href="/user/index">Trang chủ</a>
           </li>
           <li class="breadcrumb-item">
-            <a href="/user/cart.html">Giỏ hàng</a>
+            <a href="/user/cart">Giỏ hàng</a>
           </li>
           <li class="breadcrumb-item active" aria-current="page">Check out</li>
         </ol>
@@ -153,7 +153,7 @@
               >
 
               <a
-                href="/user/cart.html"
+                href="/user/cart"
                 class="view_cart_btn custom_btn btn_greylight"
                 >Trở về giỏ</a
               >
