--- a/src/main/resources/templates/user/cart.html
+++ b/src/main/resources/templates/user/cart.html
@@ -44,7 +44,7 @@
         <div class="row align-items-center">
           <div class="col-lg-12">
             <nav class="navbar navbar-expand-lg navbar-light">
-              <a class="navbar-brand" href="index.html">
+              <a class="navbar-brand" href="/">
                 <img src="/images/logo/white_logo.png" alt="logo" />
               </a>
               <button
@@ -129,7 +129,7 @@
       <div class="container">
         <ol class="breadcrumb">
           <li class="breadcrumb-item">
-            <a href="/user/index.html">Trang chủ</a>
+            <a href="/">Trang chủ</a>
           </li>
           <li class="breadcrumb-item active" aria-current="page">Giỏ hàng</li>
         </ol>
@@ -157,7 +157,7 @@
                             <a href="#" class="remove_item"><i class="far fa-trash-alt"></i></a>
                         </div> -->
             </div>
-            <a href="/user/category.html" class="custom_btn btn_greylight ms-2"
+            <a href="/user/category" class="custom_btn btn_greylight ms-2"
               >Tiếp tục lựa sản phẩm</a
             >
           </div>
