--- a/src/main/resources/templates/user/checkout.html
+++ b/src/main/resources/templates/user/checkout.html
@@ -45,7 +45,7 @@
           <div class="row align-items-center">
             <div class="col-lg-12">
               <nav class="navbar navbar-expand-lg navbar-light">
-                <a class="navbar-brand" href="index.html">
+                <a class="navbar-brand" href="index/">
                   <img src="/images/logo/white_logo.png" alt="logo" />
                 </a>
                 <button
@@ -66,19 +66,19 @@
                 >
                   <ul class="navbar-nav">
                     <li class="nav-item active">
-                      <a class="nav-link" href="index.html">Trang chủ</a>
+                      <a class="nav-link" href="/">Trang chủ</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="category.html"> Sản phẩm </a>
+                      <a class="nav-link" href="category/"> Sản phẩm </a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="category.html"> Combo </a>
+                      <a class="nav-link" href="category/"> Combo </a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="category.html"> Dịch vụ </a>
+                      <a class="nav-link" href="category/"> Dịch vụ </a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="contact.html">liên hệ</a>
+                      <a class="nav-link" href="contact/">liên hệ</a>
                     </li>
                   </ul>
                 </div>
@@ -89,7 +89,7 @@
                   <a
                     class="cart"
                     data-bs-toggle="offcanvas"
-                    href="cart.html"
+                    href="cart/"
                     role="button"
                     aria-controls="quickCart"
                   >
@@ -130,10 +130,10 @@
       <div class="container">
         <ol class="breadcrumb">
           <li class="breadcrumb-item">
-            <a href="/user/index.html">Trang chủ</a>
+            <a href="/">Trang chủ</a>
           </li>
           <li class="breadcrumb-item">
-            <a href="/user/cart.html">Giỏ hàng</a>
+            <a href="/cart/">Giỏ hàng</a>
           </li>
           <li class="breadcrumb-item active" aria-current="page">Check out</li>
         </ol>
@@ -153,7 +153,7 @@
               >
 
               <a
-                href="/user/cart.html"
+                href="/cart"
                 class="view_cart_btn custom_btn btn_greylight"
                 >Trở về giỏ</a
               >
