--- a/src/main/resources/templates/user/index.html
+++ b/src/main/resources/templates/user/index.html
@@ -6,18 +6,18 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Deprop Studio</title>
-    <link rel="icon" href="/static/images/logo/favicon_black.svg">
+    <link rel="icon" href="/images/logo/favicon_black.svg">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- plugin CSS -->
-    <link rel="stylesheet" href="/static/plugins/owl.carousel.min.css">
-    <link rel="stylesheet" href="/static/plugins/owl.theme.default.min.css">
+    <link rel="stylesheet" href="/plugins/owl.carousel.min.css">
+    <link rel="stylesheet" href="/plugins/owl.theme.default.min.css">
     <!-- icons CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@icon/themify-icons@1.0.1-alpha.3/themify-icons.min.css">
-    <link rel="stylesheet" href="/static/css/themify-icons.css">
+    <link rel="stylesheet" href="/css/themify-icons.css">
     <!-- style CSS -->
-    <link rel="stylesheet" href="/static/css/user.css">
+    <link rel="stylesheet" href="/css/user.css">
 </head>
 
 <body>
@@ -33,7 +33,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-12">
                     <nav class="navbar navbar-expand-lg navbar-light">
-                        <a class="navbar-brand" href="index.html"> <img src="/static/images/logo/white_logo.png" alt="logo"> </a>
+                        <a class="navbar-brand" href="/"> <img src="/images/logo/white_logo.png" alt="logo"> </a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse"
                             data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
@@ -43,25 +43,25 @@
                         <div class="collapse navbar-collapse main-menu-item" id="navbarSupportedContent">
                             <ul class="navbar-nav">
                                 <li class="nav-item active">
-                                    <a class="nav-link" href="index.html">Trang chủ</a>
+                                    <a class="nav-link" href="/">Trang chủ</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="category.html">
+                                    <a class="nav-link" href="/category">
                                         Sản phẩm
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="category.html">
+                                    <a class="nav-link" href="/category">
                                         Combo
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="policy.html">
+                                    <a class="nav-link" href="/policy">
                                         Chính sách
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="contact.html">liên hệ</a>
+                                    <a class="nav-link" href="/contact">liên hệ</a>
                                 </li>
                             </ul>
                         </div>
@@ -94,7 +94,7 @@
         <div class="banner_slider owl-carousel owl-theme">
             <div class="single_banner_slider">
                 <div class="banner_img">
-                    <img src="/static/images/banner/bg1.jpg" alt="">
+                    <img src="/images/banner/bg1.jpg" alt="">
                     <div class="banner_text">
                         <div class="banner_text_iner">
                             <h1>Giới thiệu</h1>
@@ -107,7 +107,7 @@
             </div>
             <div class="single_banner_slider">
                 <div class="banner_img">
-                    <img src="/static/images/banner/bg1.jpg" alt="">
+                    <img src="/images/banner/bg1.jpg" alt="">
                     <div class="banner_text">
                         <div class="banner_text_iner">
                             <h1>Giới thiệu</h1>
@@ -120,7 +120,7 @@
             </div>
             <div class="single_banner_slider">
                 <div class="banner_img">
-                    <img src="/static/images/banner/bg1.jpg" alt="">
+                    <img src="/images/banner/bg1.jpg" alt="">
                     <div class="banner_text">
                         <div class="banner_text_iner">
                             <h1>Giới thiệu</h1>
@@ -133,7 +133,7 @@
             </div>
             <div class="single_banner_slider">
                 <div class="banner_img">
-                    <img src="/static/images/banner/bg1.jpg" alt="">
+                    <img src="/images/banner/bg1.jpg" alt="">
                     <div class="banner_text">
                         <div class="banner_text_iner">
                             <h1>Giới thiệu</h1>
@@ -170,7 +170,7 @@
                                     <a href="#" class="custom_btn btn_black">Xem ngay</i></a>
                                 </div>
                                 <div class="feature_img col-lg-9">
-                                    <img src="/static/images/combo/b1.jpg" alt="">
+                                    <img src="/images/combo/b1.jpg" alt="">
                                 </div>
                             </div>
                         </div>
@@ -182,7 +182,7 @@
                                     <a href="#" class="custom_btn btn_black">Xem ngay</i></a>
                                 </div>
                                 <div class="feature_img col-lg-9">
-                                    <img src="/static/images/combo/b1.jpg" alt="">
+                                    <img src="/images/combo/b1.jpg" alt="">
                                 </div>
                             </div>
                         </div>
@@ -194,7 +194,7 @@
                                     <a href="#" class="custom_btn btn_black">Xem ngay</i></a>
                                 </div>
                                 <div class="feature_img col-lg-9">
-                                    <img src="/static/images/combo/b1.jpg" alt="">
+                                    <img src="/images/combo/b1.jpg" alt="">
                                 </div>
                             </div>
                         </div>
@@ -224,7 +224,7 @@
                                 <div class="col-lg-3 col-sm-6 col-6">
                                     <div class="single_product_item">
                                         <a href="single-product.html">
-                                            <img src="/static/images/product/item.jpg">
+                                            <img src="/images/product/item.jpg">
                                             <span class="product_tag">Nổi bật</span>
                                         </a>
                                         
@@ -244,7 +244,7 @@
                                 <div class="col-lg-3 col-sm-6 col-6">
                                     <div class="single_product_item">
                                         <a href="single-product.html">
-                                            <img src="/static/images/product/item.jpg">
+                                            <img src="/images/product/item.jpg">
                                             <span class="product_tag">Nổi bật</span>
                                         </a>
                                         
@@ -264,7 +264,7 @@
                                 <div class="col-lg-3 col-sm-6 col-6">
                                     <div class="single_product_item">
                                         <a href="single-product.html">
-                                            <img src="/static/images/product/item.jpg">
+                                            <img src="/images/product/item.jpg">
                                             <span class="product_tag">Nổi bật</span>
                                         </a>
                                         
@@ -284,7 +284,7 @@
                                 <div class="col-lg-3 col-sm-6 col-6">
                                     <div class="single_product_item">
                                         <a href="single-product.html">
-                                            <img src="/static/images/product/item.jpg">
+                                            <img src="/images/product/item.jpg">
                                             <span class="product_tag">Nổi bật</span>
                                         </a>
                                         
@@ -308,7 +308,7 @@
                                 <div class="col-lg-3 col-sm-6 col-6">
                                     <div class="single_product_item">
                                         <a href="single-product.html">
-                                            <img src="/static/images/product/item.jpg">
+                                            <img src="/images/product/item.jpg">
                                             <span class="product_tag">Nổi bật</span>
                                         </a>
                                         
@@ -328,7 +328,7 @@
                                 <div class="col-lg-3 col-sm-6 col-6">
                                     <div class="single_product_item">
                                         <a href="single-product.html">
-                                            <img src="/static/images/product/item.jpg">
+                                            <img src="/images/product/item.jpg">
                                             <span class="product_tag">Nổi bật</span>
                                         </a>
                                         
@@ -348,7 +348,7 @@
                                 <div class="col-lg-3 col-sm-6 col-6">
                                     <div class="single_product_item">
                                         <a href="single-product.html">
-                                            <img src="/static/images/product/item.jpg">
+                                            <img src="/images/product/item.jpg">
                                             <span class="product_tag">Nổi bật</span>
                                         </a>
                                         
@@ -368,7 +368,7 @@
                                 <div class="col-lg-3 col-sm-6 col-6">
                                     <div class="single_product_item">
                                         <a href="single-product.html">
-                                            <img src="/static/images/product/item.jpg">
+                                            <img src="/images/product/item.jpg">
                                             <span class="product_tag">Nổi bật</span>
                                         </a>
                                         
@@ -413,14 +413,14 @@
                 <div class="row justify-content-around">
                     <div class="col-sm-6 col-lg-5">
                         <nav class="navbar">
-                            <a class="nav-brand" href="index.html"> <img src="/static/images/logo/white_logo.png" alt="logo"> </a>
+                            <a class="nav-brand" href="index.html"> <img src="/images/logo/white_logo.png" alt="logo"> </a>
                     </div>
                     <div class="col-sm-6 col-lg-2">
                         <div class="single_footer_part">
                             <h4>Our Page</h4>
                             <ul class="list-unstyled">
                                 <li><a href="">Trang chủ</a></li>
-                                <li><a href="/user/category.html">Sản phẩm</a></li>
+                                <li><a href="/category.html">Sản phẩm</a></li>
                                 <li><a href="/user/">Combo</a></li>
                                 <li><a href="">Liên hệ</a></li>
                                 
@@ -480,7 +480,7 @@
                 <span class="total_price">100.000đ</span>
             </div>
             <div class="cart_button row">
-                <a href="/user/cart.html" class="custom_btn btn_black btn-block">View cart</a>
+                <a href="/cart" class="custom_btn btn_black btn-block">View cart</a>
             </div>
         </div>
     </div>
@@ -497,17 +497,17 @@
     <!-- bootstrap js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <!-- owl carousel plugin-->
-    <script src="/static/plugins/owl.carousel.min.js"></script>
+    <script src="/plugins/owl.carousel.min.js"></script>
     <!-- manific-popup plugin-->
-    <script src="/static/plugins/jquery.magnific-popup.js"></script>
+    <script src="/plugins/jquery.magnific-popup.js"></script>
     <!-- main js -->
-    <script src="/static/js/jquery.js"></script>
-    <script src="/static/js/common.js"></script>
-    <script src="/static/js/addtocart.js"></script>
-    <script src="/static/js/filter_sort.js"></script>
+    <script src="/js/jquery.js"></script>
+    <script src="/js/common.js"></script>
+    <script src="/js/addtocart.js"></script>
+    <script src="/js/filter_sort.js"></script>
     <!-- extra js --> 
-    <script src="/static/js/backtotop.js"></script>
-    <script src="/static/js/loading.js"></script>
+    <script src="/js/backtotop.js"></script>
+    <script src="/js/loading.js"></script>
 </body>
 
 </html>
