--- a/src/main/resources/templates/user/product.html
+++ b/src/main/resources/templates/user/product.html
@@ -5,7 +5,7 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Product Name</title>
+  <title th:text="${product.name}"></title>
   <link rel="icon" href="/images/logo/favicon_black.svg">
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -33,7 +33,7 @@
         <div class="row align-items-center">
             <div class="col-lg-12">
                 <nav class="navbar navbar-expand-lg navbar-light">
-                    <a class="navbar-brand" href="index.html"> <img src="/images/logo/white_logo.png" alt="logo"> </a>
+                    <a class="navbar-brand" href="/"> <img src="/images/logo/white_logo.png" alt="logo"> </a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse"
                         data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -43,25 +43,25 @@
                     <div class="collapse navbar-collapse main-menu-item" id="navbarSupportedContent">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link" href="index.html">Trang chủ</a>
+                                <a class="nav-link" href="/">Trang chủ</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="category.html">
+                                <a class="nav-link" href="/category">
                                     Sản phẩm
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="category.html">
+                                <a class="nav-link" href="/category">
                                     Combo
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="category.html">
-                                    Dịch vụ
+                                <a class="nav-link" href="/policy">
+                                    Chính sách
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="contact.html">liên hệ</a>
+                                <a class="nav-link" href="/contact">liên hệ</a>
                             </li>
                         </ul>
                     </div>
@@ -92,9 +92,9 @@
   <nav class="breadcrumb_area" aria-label="breadcrumb" style="--bs-breadcrumb-divider: '>';">
     <div class="container">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="/user/index.html">Trang chủ</a></li>
-            <li class="breadcrumb-item"><a href="/user/category.html">Sản phẩm</a></li>
-            <li class="breadcrumb-item product_name active" aria-current="page">Product Name</li>
+            <li class="breadcrumb-item"><a href="/">Trang chủ</a></li>
+            <li class="breadcrumb-item"><a href="/category">Sản phẩm</a></li>
+            <li class="breadcrumb-item product_name active" aria-current="page" th:text="${product.name}"></li>
           </ol>
     </div>
   </nav>
@@ -104,8 +104,8 @@
     <div class="container">
       <div class="row s_product_inner justify-content-between">
         <div class="col-lg-6">
-          <a href="/user/img/item.jpg" class="s_product_img">
-              <img class="product_img" src="/images/product/item.jpg"  alt="Product Image"/>
+          <a th:href="@{'data:image/png;base64,' + ${product.image}}" class="s_product_img">
+              <img th:src="@{'data:image/png;base64,' + ${product.image}}" alt="Product Image">
           </a>
         </div>
         <div class="col-lg-6">
@@ -113,18 +113,16 @@
             <div class="product_category">
               <a href="#">Category</a>
             </div>
-            <div class="product_name">Product Name</div>
+            <div class="product_name" th:text="${product.name}"></div>
             <div class="product_price current_prefix">
-              100
+                <a th:text="${product.price}"></a>
             </div>
             <ul class="list">
               <li>
                 <a href="#"> <span>Tình trạng:</span>In Stock</a>
               </li>
             </ul>
-            <p>
-              First replenish living. Creepeth image image. Creeping can't, won't called.
-              Two fruitful let days signs sea together all land fly subdue
+            <p th:text="${product.description}">
             </p>
             <div class="card_area d-flex">
               <div class="product_count">
@@ -132,7 +130,7 @@
                 <input class="input-number product_quantity" type="text" value="1" min="1">
                 <span class="number-increment"><i class="ti-plus"></i></span>
               </div>
-              <button class="add_to_cart custom_btn btn_black">Thêm vào giỏ</button>
+              <button class="add_to_cart custom_btn btn_black" th:data-id="${product.id}">Thêm vào giỏ</button>
             </div>
             <div class="product_accordion d-flex flex-column">
               <div class="product_description_offcanvas">
@@ -266,7 +264,7 @@
                         <div class="row align-items-center justify-content-between">
                             <div class="col-lg-3 col-sm-6 col-6">
                               <div class="single_product_item">
-                                <a href="single-product.html">
+                                <a href="/single-product">
                                     <img src="/images/product/item.jpg">
                                     <span class="product_tag">Nổi bật</span>
                                 </a>
@@ -276,7 +274,7 @@
                                         <a class="text-muted-1" href="#">Category</a>
                                     </h5>
                                     <h4 class="product_title">
-                                        <a href="single-product.html">Product Name</a>
+                                        <a href="/single-product">Product Name</a>
                                     </h4>
                                     <div class="product_price current_prefix">
                                         100
@@ -286,7 +284,7 @@
                             </div>
                             <div class="col-lg-3 col-sm-6 col-6">
                               <div class="single_product_item">
-                                <a href="single-product.html">
+                                <a href="/single-product">
                                     <img src="/images/product/item.jpg">
                                     <span class="product_tag">Nổi bật</span>
                                 </a>
@@ -296,7 +294,7 @@
                                         <a class="text-muted-1" href="#">Category</a>
                                     </h5>
                                     <h4 class="product_title">
-                                        <a href="single-product.html">Product Name</a>
+                                        <a href="/single-product">Product Name</a>
                                     </h4>
                                     <div class="product_price current_prefix">
                                         100
@@ -306,7 +304,7 @@
                             </div>
                             <div class="col-lg-3 col-sm-6 col-6">
                               <div class="single_product_item">
-                                <a href="single-product.html">
+                                <a href="/single-product">
                                     <img src="/images/product/item.jpg">
                                     <span class="product_tag">Nổi bật</span>
                                 </a>
@@ -316,7 +314,7 @@
                                         <a class="text-muted-1" href="#">Category</a>
                                     </h5>
                                     <h4 class="product_title">
-                                        <a href="single-product.html">Product Name</a>
+                                        <a href="/single-product">Product Name</a>
                                     </h4>
                                     <div class="product_price current_prefix">
                                         100
@@ -326,7 +324,7 @@
                             </div>
                             <div class="col-lg-3 col-sm-6 col-6">
                               <div class="single_product_item">
-                                <a href="single-product.html">
+                                <a href="/single-product">
                                     <img src="/images/product/item.jpg">
                                     <span class="product_tag">Nổi bật</span>
                                 </a>
@@ -336,7 +334,7 @@
                                         <a class="text-muted-1" href="#">Category</a>
                                     </h5>
                                     <h4 class="product_title">
-                                        <a href="single-product.html">Product Name</a>
+                                        <a href="/single-product">Product Name</a>
                                     </h4>
                                     <div class="product_price current_prefix">
                                         100
@@ -350,7 +348,7 @@
                         <div class="row align-items-center justify-content-between">
                             <div class="col-lg-3 col-sm-6 col-6">
                               <div class="single_product_item">
-                                <a href="single-product.html">
+                                <a href="/single-product">
                                     <img src="/images/product/item.jpg">
                                     <span class="product_tag">Nổi bật</span>
                                 </a>
@@ -360,7 +358,7 @@
                                         <a class="text-muted-1" href="#">Category</a>
                                     </h5>
                                     <h4 class="product_title">
-                                        <a href="single-product.html">Product Name</a>
+                                        <a href="/single-product">Product Name</a>
                                     </h4>
                                     <div class="product_price current_prefix">
                                         100
@@ -370,7 +368,7 @@
                             </div>
                             <div class="col-lg-3 col-sm-6 col-6">
                               <div class="single_product_item">
-                                <a href="single-product.html">
+                                <a href="/single-product">
                                     <img src="/images/product/item.jpg">
                                     <span class="product_tag">Nổi bật</span>
                                 </a>
@@ -380,7 +378,7 @@
                                         <a class="text-muted-1" href="#">Category</a>
                                     </h5>
                                     <h4 class="product_title">
-                                        <a href="single-product.html">Product Name</a>
+                                        <a href="/single-product">Product Name</a>
                                     </h4>
                                     <div class="product_price current_prefix">
                                         100
@@ -390,7 +388,7 @@
                             </div>
                             <div class="col-lg-3 col-sm-6 col-6">
                               <div class="single_product_item">
-                                <a href="single-product.html">
+                                <a href="/single-product">
                                     <img src="/images/product/item.jpg">
                                     <span class="product_tag">Nổi bật</span>
                                 </a>
@@ -400,7 +398,7 @@
                                         <a class="text-muted-1" href="#">Category</a>
                                     </h5>
                                     <h4 class="product_title">
-                                        <a href="single-product.html">Product Name</a>
+                                        <a href="/single-product">Product Name</a>
                                     </h4>
                                     <div class="product_price current_prefix">
                                         100
@@ -410,7 +408,7 @@
                             </div>
                             <div class="col-lg-3 col-sm-6 col-6">
                               <div class="single_product_item">
-                                <a href="single-product.html">
+                                <a href="/single-product">
                                     <img src="/images/product/item.jpg">
                                     <span class="product_tag">Nổi bật</span>
                                 </a>
@@ -420,7 +418,7 @@
                                         <a class="text-muted-1" href="#">Category</a>
                                     </h5>
                                     <h4 class="product_title">
-                                        <a href="single-product.html">Product Name</a>
+                                        <a href="/single-product">Product Name</a>
                                     </h4>
                                     <div class="product_price current_prefix">
                                         100
@@ -444,16 +442,17 @@
             <div class="row justify-content-around">
                 <div class="col-sm-6 col-lg-5">
                     <nav class="navbar">
-                        <a class="nav-brand" href="index.html"> <img src="/images/logo/white_logo.png" alt="logo"> </a>
+                        <a class="nav-brand" href="/"> <img src="/images/logo/white_logo.png" alt="logo"> </a>
+                    </nav>
                 </div>
                 <div class="col-sm-6 col-lg-2">
                     <div class="single_footer_part">
                         <h4>Our Page</h4>
                         <ul class="list-unstyled">
                             <li><a href="">Trang chủ</a></li>
-                            <li><a href="/user/category.html">Sản phẩm</a></li>
-                            <li><a href="/user/">Combo</a></li>
-                            <li><a href="">Liên hệ</a></li>
+                            <li><a href="/category">Sản phẩm</a></li>
+                            <li><a href="/category">Combo</a></li>
+                            <li><a href="/contact">Liên hệ</a></li>
                             
                         </ul>
                     </div>
@@ -522,10 +521,10 @@
     <div class="offcanvas-footer">
         <div class="total_area d-flex align-items-center justify-content-between">
             <span class="total_text">Tổng:</span>
-            <span class="total_price">100.000đ</span>
+            <span class="total_price">đ</span>
         </div>
         <div class="cart_button row">
-            <a href="/user/cart.html" class="custom_btn btn_black btn-block">View cart</a>
+            <a href="/cart" class="custom_btn btn_black btn-block">View cart</a>
         </div>
     </div>
   </div>
